--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "module-info",
-	"description": "Find package.json files in module and load information from it",
-	"version": "1.2.2",
+	"description": "[ABANDONED] Find package.json files in module and load information from it",
+	"version": "1.2.3",
 	"author": {
 		"name": "David Kudera",
-		"email": "sakren@gmail.com"
+		"email": "kudera.d@gmail.com"
 	},
 	"keywords": [
 		"module",
@@ -13,7 +13,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "git@github.com:sakren/node-module-info.git"
+		"url": "git@github.com:Carrooi/Node-ModuleInfo.git"
 	},
 	"license": "MIT",
 	"engines": {
@@ -31,3 +31,4 @@
 		"test": "cd ./test; mocha ./index.js --reporter spec;"
 	}
 }
+
